--- a/css/style.css
+++ b/css/style.css
@@ -116,8 +116,7 @@ a {
     margin: 0;
     padding: 0;
 }
-.name-item a {    
-    line-height: 40px;
+.name-item a {        
     font-family: "Roboto", sans-serif;
     font-size: 18px;
     line-height: 32px;
@@ -215,7 +214,7 @@ a {
 
 .button {   
     margin: 0 auto;
-    padding: 26px 36px;    
+    padding: 13px 38px;    
     line-height: 24px;
     background: #42c5aa;
     cursor: pointer;  
@@ -224,5 +223,8 @@ a {
     font-size: 16px;
     border: none;
     border-radius: 5%;
+    width: 160px;
+    height: 50px;
+    
 
 }
