--- a/css/style.css
+++ b/css/style.css
@@ -9,8 +9,8 @@ body {
  color: #515151;
 }
 
-.conteiner {
-  width: 1140px; 
+.conteiner {   
+  width: 1110px;
   margin: 0 auto;
   padding: 0 13px;
   margin-bottom: 109px;
@@ -22,6 +22,7 @@ body {
     content: "";
     clear: both;
 }
+
 
 /*------Logo------*/
 
@@ -68,163 +69,211 @@ a {
     color: #42c5aa;
 }
 
-  /*------Section Featured Product------*/
-
-.featured-product {
-    width: 1140px;
-    margin-bottom: 104px;
-   
+  /*------Slide------*/
+  .slide {
+    position:relative;
+    height: 600px;
 }
+  .slide-title {
+    position: absolute;    
+    color: #ffffff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);    
+  }
+  
+  .slide-name {
+    font-family: "Roboto Black", sans-serif;
+    font-size: 60px;
+    line-height: 82px;
+    text-transform: uppercase;
+    margin: 0;
+    padding: 0;
+    width: 775px;
+  }
+  .slide-pos {
+    font-family: "Roboto Light", sans-serif;
+    font-size: 24px;
+    line-height: 54px;
+    margin: 0;
+    padding: 0;
+    text-transform: uppercase;
+  }
 
-.featured-product h2 {    
-    font-size: 48px;
-    line-height: 32px;
-    font-weight: 900;
-    text-align: center;  
-    text-transform: uppercase; 
-    
+  /*-------Slide Button------*/
+  .btn-left,
+  .btn-right {
+    position: absolute;
+    width: 104px;
+    height: 104px;    
+    border: none;
+    cursor: pointer;
+    background-color: #54a18f;    
+    top: 50%;
+    left: 50%;   
+    font-size: 100px;
+    color: #ffffff;
+    text-align: center;    
+
+  }
+
+  .btn-left {
+     float: left;
+     transform: translate(-500%,-50%);
  }
 
- .featured-product h2::after {
-    display: block;
-    width: 160px;
-    height: 7px;
-    background-color: #42c5aa;
-    content: "";
-    margin-top: 30px;
-    margin-left: 490px;
+ .btn-right {
+    float: right;
+    transform: translate(400%,-43%);
+ }
+
+ .btn-left:hover,
+ .btn-right:hover {
+    background-color: #1abc9c;
+    opacity: 1;
+ }
+
+  /*-------Section New Collection------*/
+   .new-collection {
+    padding-top: 95px;
+    padding-bottom: 105px;
+    background-color: #e9f0fd;
+    
+   }
+  .name-new-collection {
+    font-family: "Roboto Black";
+    font-size: 48px;
+    line-height: 32px;
+    text-transform: uppercase;       
+    padding: 0;        
+  }
+.name-new-collection h2 {
+    text-align: center;
+    margin: 0;
     
 }
-  
-.featured-ptoduct-list {   
-    margin-top: 133px;
+
+h2::after {
+    display: block;
+    width: 162px;
+    height: 7px;
+    background-color: #1abc9c;
+    content: '';
     padding: 0;
-}
-.featured-product li{ 
-  float: left;  
-  width: 255px;
-  margin-bottom: 30px;  
-  list-style: none;
-  background-color: #e9f0fd;
+    margin: 30px auto;
 }
 
-
-.name-item {
+.new-collection-list { 
+    margin: 82px auto;     
+    padding: 0;
+    width: 1110px;
+    
+}
+.new-collection-list li {
     float: left;
-    width: 200px;
-    background-color: rgb(50, 50, 50);
-    margin: 0;
-    padding: 0;
+    list-style: none; 
+    width: 255px; 
+    height: 322px;  
+    
 }
-.name-item a {        
-    font-family: "Roboto", sans-serif;
-    font-size: 18px;
-    line-height: 32px;
-    color: rgb(255, 255, 255);
-    padding-left: 14px;
-    text-transform: uppercase;    
-          
+.new-collection-list li:not(:last-child) {
+    margin-right: 30px;
 }
+ .new-collection-card {
+    position: relative;
+ }
 
+.category-price-item {        
+    font-family: "Roboto Black";
+    font-size: 18px;    
+    color: #ffffff;
+    
+    
+}
+.new-collection-img {       
+    display: block;
+}
+.category-item {
+    margin: 0 auto;
 
+}
+.category-item a {    
+    float: left;    
+    text-transform: uppercase; 
+    color: #ffffff;
+    background-color: #515151;
+    width: 201px;
+    text-align: left; 
+    height: 40px; 
+         
+}
+ .category-item a:hover {
+    background-color: #1abc9c;
+ }
 
 .price-item {
-    float: right;
-    font-family: "Roboto", sans-serif;
-    background-color: rgb(140, 140, 140);
-    color: rgb(255, 255, 255);
-    width: 55px;
-    margin: 0;
-    padding: 0;    
-    text-align: center;
-    line-height: 32px;
-    font-size: 18px;
-       
-}
-.featured-product-list-item:not(:nth-child(4n)) {
-    margin-right: 30px;
-}
-
-/* ------Latest New-----*/
-
-.latest-new {
-    width: 1140px;
-}
-
-.latest-new h2 {
-    font-size: 48px;
-    font-weight: 900;
-    text-align: center;  
-    text-transform: uppercase;  
-    letter-spacing: -0.98px;  
-    
-}
-
-.latest-new h2::after {
-    display: block;
-    width: 160px;
-    height: 7px;
-    background-color: #42c5aa;
-    content: "";
-    margin-top: 30px;
-    margin-left: 490px;
-}
-
-.latest-new-list {
-    padding: 0;
-
-}
-
-   
-.latest-new-list li {
-    margin-right: 30px;
-    list-style: none;
-
-}
-
-.latest-new-list-item {
-    float: left;
-    width: 350px;
-    margin-top: 82px;
-}
-
-.latest-new-list-item::not(:nth-child(3n)) {
-    margin-right: 30px;
-}   
-
-.latest-new-item-name {
-    font-family: "Open Sans", sans-serif;
-    font-size: 18px;
-    line-height: 26px;
-    font-weight: 600;
-    padding-top: 9px;
-    padding-bottom: 26px;
-    margin: 0;
-}
-
-.latest-new-item-name::after {
-    display: block;
-    width: 136px;
-    height: 3px;
-    background-color: #42c5aa;
-    content: "";
-    margin-top: 9px;
-      
-}   
-
-.button {   
+    float:right;
+    height: 40px;
+    width: 54px;
+    background-color: #8c8c8c;
     margin: 0 auto;
-    padding: 13px 38px;    
-    line-height: 24px;
-    background: #42c5aa;
-    cursor: pointer;  
-    text-align: center; 
-    color: rgb(255, 255, 255); 
-    font-size: 16px;
-    border: none;
-    border-radius: 5%;
-    width: 160px;
-    height: 50px;
+    text-align: center;
     
-
 }
+.price-item:hover {
+    background-color: #7fd9c7;
+}
+
+.overlay-btn {
+    position: absolute;
+    width: 235px;
+    height: 262px;
+    background-color: #000000;
+    opacity: 0;
+    margin: 10px;
+}
+
+.new-collection-card:hover .overlay-btn {
+    opacity: 0.549;
+}
+
+.btn {
+    float: right; 
+    margin-right: 8px;
+    margin-bottom: 8px;
+    width: 50px;
+    height: 50px;
+    background-color: transparent;
+    border: 1px solid #fff;
+    color: #fff;
+    cursor: pointer;
+   
+}
+ 
+.btn:hover {
+    background-color: #1abc9c;
+}
+
+
+  
+
+
+  
+/*-------Footer------*/
+.footer {
+   background-color: #323232;;
+}
+
+.footer p {
+    padding: 31px 0;
+    font-family: "Open Sans", sans-serif;
+    font-size: 16px;
+    letter-spacing: -0.02em;
+    text-align: center;
+    color: #fefefe;
+  }
+  
+  .footer a {
+    font-family: "Open Sans", sans-serif;
+    color: #46bfa9;
+  }
